<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NettyServer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lblIpAddressText">IP Address :</string>
    <string name="lblPortNumberText">Enter Port Number :</string>
    <string name="defaultIPAddress">10.0.2.15</string>
    <string name="defaultPortNumber">8085</string>
    <string name="lblRecievedMessages">Recieved messages from client :</string>

</resources>
