<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txtClientMessageAria"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:maxLines="100"
        android:minLines="10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/lblIpAddressText"
        android:id="@+id/lblIpAddress"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/lblPortNumberText"
        android:id="@+id/lblPortNumber"
        android:layout_below="@+id/lblIpAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultIPAddress"
        android:id="@+id/txtIPAddress"
        android:layout_above="@+id/lblPortNumber"
        android:layout_toRightOf= "@id/lblPortNumber"
        android:layout_marginLeft="10dp"
        android:textSize="18dp"
        android:editable="false"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:textSize="18dp"
        android:id="@+id/txtPortNumber"
        android:layout_alignBottom="@+id/lblPortNumber"
        android:layout_alignLeft="@+id/txtIPAddress"
        android:layout_alignStart="@+id/txtIPAddress"
        android:layout_below="@+id/txtIPAddress"
        android:layout_marginTop="5dp"
        android:text="@string/defaultPortNumber" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/lblRecievedMessages"
        android:id="@+id/lblRecievedMessages"
        android:editable="false"
        android:layout_above="@+id/txtClientMessageAria"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
